# NPC-VCMP

./: .gitignore  ATTRIBUTIONS  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  batch-build-v141_xp.bat  packet details.txt
include/: Utils.h
npc-plugin/: CMakeLists.txt  SqImports.h  main.cpp  main.h  plugin.h  sqmodule.h  utils.h
npcclient/: CMakeLists.txt  npc32_static.lib
npcclient-plugins/actionlib/: CMakeLists.txt  functions.cpp  main.cpp  main.h  utils.h  weapon.cpp  weapon.h
npcclient-plugins/npc-plugin/: CMakeLists.txt  Readme.txt  main.cpp  plugin.h
npcclient-plugins/stdrpc/: CMakeLists.txt  RPC.cpp  RPC.h  main.cpp  main.h  plugin.h
npcclient-plugins/z-finder/: CMakeLists.txt  CMakeSettings.json  SqImports.h  build-v141-xp.bat  main.cpp  plugin.h  sqmodule2.h  utils.h
npcclient/Raknet/: NatPunchthroughClient.cpp  RakPeer.cpp  RakString.cpp  ReliabilityLayer.cpp  ReplicaManager3.cpp
npcclient/client/: CTimer.cpp  CTimer.h  ClientFunctions.cpp  ClientFunctions.h  ConsoleInput.cpp  EventHandler.cpp  EventHandler.h  Exports.cpp  Exports.h  FileReceiver.cpp  FileReceiver.h  NPCClient.cpp  NPCFunctions.cpp  NPCFunctions2.cpp  NPCFunctions3.cpp  NPCFunctions4.cpp  NPCFunctions5.cpp  NPCFunctions6.cpp  Playback.cpp  Playback.h  Player.cpp  Player.h  Playerpool.cpp  Playerpool.h  Plugins.cpp  Plugins.h  SYNC_DATA.h  SpawnClass.h  SqQuaternion.cpp  SqVector.cpp  SqVector.h  SquirrelVM.cpp  UpdateNPC.cpp  VehiclePool.cpp  VehiclePool.h  checkpointpool.h  compress.cpp  compress.h  main.cpp  main.h  (+8 more)
npcclient/dependencies/ncurses-6.4/: Makefile  config.status  edit_man.sh  man_alias.sed
npcclient/dependencies/ncurses-6.4/c++/: Makefile
npcclient/dependencies/ncurses-6.4/form/: Makefile
npcclient/dependencies/ncurses-6.4/include/: Makefile  ncurses_cfg.h
npcclient/dependencies/ncurses-6.4/man/: Makefile  ncurses6-config.1
npcclient/dependencies/ncurses-6.4/menu/: Makefile
npcclient/dependencies/ncurses-6.4/misc/: Makefile  ncurses-config  run_tic.sh
npcclient/dependencies/ncurses-6.4/ncurses/: Makefile
npcclient/dependencies/ncurses-6.4/package/: mingw-ncurses.nsi
npcclient/dependencies/ncurses-6.4/panel/: Makefile
npcclient/dependencies/ncurses-6.4/progs/: Makefile
npcclient/dependencies/ncurses-6.4/test/: Makefile
npcclient/dependencies/slikenet_0.1.3_source/slikenet/: CMakeLists.txt
npcclient/dependencies/slikenet_0.1.3_source/slikenet/Lib/LibStatic/: CMakeLists.txt
npcclient/dependencies/slikenet_0.1.3_source/slikenet/Samples/Lobby3/: Lobby3.vcxproj
npcclient/dependencies/slikenet_0.1.3_source/slikenet/Source/include/slikenet/: MessageIdentifiers.h  version.h
npcclient/dependencies/slikenet_0.1.3_source/slikenet/Source/src/: RakNetSocket2_0470.cpp  RakNetSocket2_Berkley_0470.cpp  RakPeer_0470.cpp
npcclient/dependencies/slikenet_0.1.3_source/slikenet/include/RakNet/include/slikenet/: defineoverrides.h
npcclient/dependencies/squirrel-master/: CMakeLists.txt
npcclient/dependencies/zlib/: CMakeLists.txt
npcclient/libs/x32/: libreadline info.txt  npcConnect.lib  npc_static.lib  npc_static2.lib  sqstdlib_static.lib  squirrel_static.lib
npcclient/sqrat/: sqmodule.h
npcclient/tclap/: CmdLine.h
out-linux/: CMakeCache.txt  Makefile  cmake_install.cmake
out-linux/npcclient/: Makefile  cmake_install.cmake
out-linux/npcclient/dependencies/libncurses-out/: Makefile  config.status  edit_man.sh
out-linux/npcclient/dependencies/libncurses-out/c++/: Makefile
out-linux/npcclient/dependencies/libncurses-out/form/: Makefile
out-linux/npcclient/dependencies/libncurses-out/include/: Makefile  curses.h  ncurses_cfg.h  ncurses_def.h
out-linux/npcclient/dependencies/libncurses-out/man/: Makefile  ncurses6-config.1  terminfo.5
out-linux/npcclient/dependencies/libncurses-out/menu/: Makefile
out-linux/npcclient/dependencies/libncurses-out/misc/: Makefile  ncurses-config  run_tic.sh
out-linux/npcclient/dependencies/libncurses-out/ncurses/: Makefile  comp_captab.c  comp_userdefs.c  fallback.c  keys.list  lib_gen.c  link_test.c  make_hash  make_keys  report_offsets
out-linux/npcclient/dependencies/libncurses-out/panel/: Makefile
out-linux/npcclient/dependencies/libncurses-out/progs/: Makefile  clear  infocmp  tabs  tic  toe  tput  tset
out-linux/npcclient/dependencies/libncurses-out/test/: Makefile  back_ground  background  blue  bs  cardfile  chgat  clip_printw  color_content  color_set  combine  demo_altkeys  demo_defkey  demo_forms  demo_keyok  demo_menus  demo_new_pair  demo_panels  demo_tabs  demo_termcap  demo_terminfo  ditto  dots  dots_curses  dots_mvcur  dots_termcap  dots_xcurses  dup_field  echochar  extended_color  filter  firework  firstlast  foldkeys  form_driver_w  gdc  hanoi  hashtest  inch_wide  inchs  (+44 more)
out-linux/npcclient/dependencies/libreadline-out/: Makefile  config.h  config.status
out-linux/npcclient/dependencies/libreadline-out/doc/: Makefile
out-linux/npcclient/dependencies/libreadline-out/examples/: Makefile
out-linux/npcclient/dependencies/libreadline-out/shlib/: Makefile
out-linux/npcclient/dependencies/squirrel-master/: Makefile  cmake_install.cmake
out-linux/npcclient/dependencies/squirrel-master/sqstdlib/: Makefile  cmake_install.cmake
out-linux/npcclient/dependencies/squirrel-master/squirrel/: Makefile  cmake_install.cmake
out-linux/npcclient/libncurses-prefix/tmp/: libncurses-cfgcmd.txt  libncurses-mkdirs.cmake
out-linux/npcclient/libreadline-prefix/tmp/: libreadline-cfgcmd.txt  libreadline-mkdirs.cmake
plugin/: CMakeLists.txt  ClientScriptData.cpp  ClientScriptData.h  Exports.h  HideNPCImports.h  PlaybackMultiple.cpp  PlaybackMultiple.h  PlayerRecording.cpp  PlayerRecording.h  RPC.cpp  ReadCFG.cpp  ReadCFG.h  SQConsts.cpp  SQConsts.h  SQFuncs.cpp  SQFuncs.h  SQMain.cpp  SQMain.h  SQModule.h  SYNC_DATA.h  ServerRecording.cpp  ServerRecording.h  squirrel.h  system.h
plugin/libs/: sqstdlib_static_x64.lib
recupdate/: CMakeLists.txt  Changelog.txt  SYNC_DATA.h  main.cpp
tools/recupdate/: CMakeLists.txt  SYNC_DATA.h  main.cpp
(+6 files in other folders)
