cmake_minimum_required (VERSION 3.8)
project("actionlib") 
# Add source to this project's executable.
add_library(actionlib MODULE
"main.cpp"  "functions.cpp" "weapon.cpp" "weapon.h" )
set_target_properties(actionlib PROPERTIES PREFIX "")
if(MSVC)
add_definitions(-D_CRT_SECURE_NO_WARNINGS)
endif()
set(CMAKE_BUILD_TYPE Release)
if(FORCE_32)
	set_target_properties(actionlib PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32")
	if(WIN32)
		set_target_properties(actionlib PROPERTIES OUTPUT_NAME "actionlib")
	else()
		set_target_properties(actionlib PROPERTIES OUTPUT_NAME "actionlib32")
	endif()
elseif((CMAKE_SIZEOF_VOID_P EQUAL 8) AND (NOT WIN32))
	set_target_properties(actionlib PROPERTIES OUTPUT_NAME "actionlib64")
elseif(CMAKE_SIZEOF_VOID_P EQUAL 8) 
	message(FATAL_ERROR "Module for npcclient on windows must be 32-bit")
elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
	if(WIN32)
	set_target_properties(actionlib PROPERTIES OUTPUT_NAME "actionlib")
	else()
	set_target_properties(actionlib PROPERTIES OUTPUT_NAME "actionlib32")
	endif()
endif()

