cmake_minimum_required (VERSION 3.8)
# Add source to this project's executable.
add_executable (recupdate
"main.cpp" )
target_include_directories(recupdate PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")

set(CMAKE_BUILD_TYPE Release)
if(MSVC)
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
endif()
if(FORCE_32)
	if(WIN32)
		set_target_properties(recupdate PROPERTIES OUTPUT_NAME "recupdate")
	else()
		set_target_properties(recupdate PROPERTIES OUTPUT_NAME "recupdate32")
	endif()
elseif((CMAKE_SIZEOF_VOID_P EQUAL 8) AND (NOT WIN32))
	set_target_properties(recupdate PROPERTIES OUTPUT_NAME "recupdate64")
elseif(CMAKE_SIZEOF_VOID_P EQUAL 8) 
	message(FATAL_ERROR "recupdate must be 32-bit for windows")
elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
	if(WIN32)
	set_target_properties(recupdate PROPERTIES OUTPUT_NAME "recupdate")
	else()
	set_target_properties(recupdate PROPERTIES OUTPUT_NAME "recupdate32")
	endif()
endif()
